--- a/css/base.css
+++ b/css/base.css
@@ -179,11 +179,11 @@ a:focus-visible {
 }
 
 .content__title--style-1 {
-	font-family: new-order, sans-serif;
+	font-family: Helvetica, sans-serif;
 	font-weight: 400;
 	font-size: 10vw;
 	line-height: 0.85;
-	background: linear-gradient(90deg, #e9a680 0%,#992d46 50%, #064cb5 100%);;
+	background: linear-gradient(90deg, #ffffff 0%,#8629FF 50%, #ffffff 100%);;
     background-size: cover;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
@@ -199,6 +199,14 @@ a:focus-visible {
 	line-height: 0.8;
 }
 
+.content__title--style-3 {
+	font-family: Arial, Helvetica, sans-serif, serif;
+	font-weight: 400;
+	font-size: 10vw;
+	opacity: 0.7;
+	line-height: 0.8;
+}
+/* Helvetica Now Text Family */
 
 @media screen and (min-width: 53em) {
 	.frame {
